show missing commands in webui

--- a/web/index.html
+++ b/web/index.html
@@ -110,6 +110,7 @@
                         <input class="form-check-input" type="checkbox" id="twitch-disable-ads" disabled> <label class="form-check-label" for=
                         "twitch-disable-ads">Disable Twitch ads</label>
                       </div>
+                      <div id="streamlink_note"></div>
                     </div>
                   </div>
                 </div>
@@ -158,6 +159,7 @@
           </div>
         </div>
       </div>
+      <div id="cmd_missing_alert"></div>
     </div><!-- tab-pane -->
     <div class="tab-pane fade" id="control" role="tabpanel" aria-labelledby="control-tab" style="max-width: 700px;">
       <table class="table caption-top">
