--- a/web/index.html
+++ b/web/index.html
@@ -245,12 +245,12 @@
   </div>
 
 	<!-- Modal -->
-	<div class="modal modal-lg fade" id="cmds_modal" tabindex="-1" aria-labelledby="cmdModalLabel" aria-hidden="true">
+	<div class="modal modal-lg fade" id="cmds_modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="cmdModalLabel" aria-hidden="true">
 	  <div class="modal-dialog">
 		<div class="modal-content">
 		  <div class="modal-header">
 			<h1 class="modal-title fs-5" id="cmdModalLabel">Required &amp; optional commands</h1>
-			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="cmd_modal_close1"></button>
 		  </div>
 
 		  <div class="modal-body">
@@ -276,12 +276,12 @@
                   </tr>
                 </tbody>
               </table>
-
+          <div id="req_missing" hidden><center><b>fnordstream will not work without the mpv Player and yt-dlp!</b></center></div>
 		  </div>
 		  <div class="modal-footer">
 			<div class="spinner-border" role="status" id="cmd_refresh_busy2" hidden><span class="visually-hidden">Loading...</span></div>
 			<button type="button" class="btn btn-secondary" id="commands_refresh2"><i class="bi bi-arrow-clockwise"></i>&nbsp;Refresh</button>
-			<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+			<button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="cmd_modal_close2">Close</button>
 		  </div>
 		</div>
 	  </div>
