--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,20 @@
     "tab" aria-controls="setup" aria-selected="setup">Setup</button></li>
     <li class="nav-item" role="presentation"><button class="nav-link" id="control-tab" data-bs-toggle="tab" data-bs-target="#control" type="button" role="tab"
     aria-controls="control" aria-selected="false">Control</button></li>
+    <li class="form-check form-switch ms-auto mt-3 me-3">
+    <label class="form-check-label" for="lightSwitch">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="25"
+      height="25"
+      fill="currentColor"
+      class="bi bi-brightness-high"
+      viewBox="0 0 16 16">
+      <path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
+    </svg>
+  </label>
+  <input class="form-check-input" type="checkbox" id="lightSwitch" />
+    </li>
   </ul><br>
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="setup" role="tabpanel" aria-labelledby="setup-tab">
@@ -289,6 +303,6 @@
 
   <script src="bootstrap-5.3.0-alpha1-dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <script src="webui.js"></script>
-
+  <script src="themeswitch.js"></script>
 </body>
 </html>
