--- a/web/index.html
+++ b/web/index.html
@@ -176,10 +176,7 @@
       <div id="cmd_missing_alert"></div>
     </div><!-- tab-pane -->
     <div class="tab-pane fade" id="control" role="tabpanel" aria-labelledby="control-tab" style="max-width: 700px;">
-      <table class="table caption-top">
-        <caption>
-          Streams:
-        </caption>
+      <table class="table">
         <thead>
           <tr>
             <th scope="col">#</th>
