make shutdown button less yellowy

--- a/web/index.html
+++ b/web/index.html
@@ -231,7 +231,7 @@
       <!-- d-inline-flex -->
       <!-- <div class="input-group me-2"> -->
       <div class="d-flex justify-content-end">
-        <button type="button" class="btn btn-warning" style="margin-left: auto;" id="streams_quit"><i class=
+        <button type="button" class="btn btn-secondary" style="margin-left: auto;" id="streams_quit"><i class=
         "bi bi-x-square-fill"></i>&nbsp;Shutdown</button> <!-- </p> -->
       </div>
       <div class="form-check form-switch">
