fix stream status indicators

--- a/web/index.html
+++ b/web/index.html
@@ -191,12 +191,12 @@
 			  <span>
 				  <span id="stream-playing-">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 100 100">
-						<circle cx="50" cy="50" r="30" fill="#00df00"></circle>
+						<circle cx="50" cy="50" r="30" fill="#00c000"></circle>
 					</svg>
 				  </span>
 				  <span id="stream-stopped-">
 					  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 100 100">
-						<circle cx="50" cy="50" r="30" fill="#df0000"></circle>
+						<circle cx="50" cy="50" r="30" fill="#c00000"></circle>
 					</svg>
 				  </span>
 					  <div id="stream-starting-" class="spinner-border spinner-border-sm" role="status">
