--- a/web/index.html
+++ b/web/index.html
@@ -78,7 +78,7 @@
                   <tr>
                     <th scope="col">Display</th>
                     <th scope="col">Position</th>
-                    <th scope="col">Resolution</th>
+                    <th scope="col">Resolution <i id="display-resolution-info" class="bi bi-info-circle-fill" data-bs-toggle="tooltip" data-bs-html="true" data-bs-title="TBD<br>foo"></i></th>
                     <th scope="col">Use</th>
                   </tr>
                 </thead>
