show video-bitrate of streams

--- a/web/index.html
+++ b/web/index.html
@@ -210,9 +210,8 @@
                     <label for="stream-volume-" class="form-label"><i class="bi bi-volume-up-fill"></i></label> <input type="range" class="form-range" id="stream-volume-">
                   </div>
                   <div class="col">
-                    <div class="mb-1" id="stream-buffer-">
-                      Buffer:
-                    </div>
+                    <span class="mb-1" id="stream-buffer-"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <span class="mb-1" id="stream-vbr-"></span>
                     <div class="btn-group me-2" role="group" aria-label="group">
                       <input type="checkbox" class="btn-check" id="stream-muting-" autocomplete="off"> 
                       <label class="btn btn-outline-secondary" for="stream-muting-" data-bs-toggle="tooltip" data-bs-title="mute/unmute">
