change label text

--- a/web/index.html
+++ b/web/index.html
@@ -248,7 +248,7 @@
       </div>
       <div class="form-check form-switch">
         <input class="form-check-input" type="checkbox" id="tooltips_enable"> <label class="form-check-label" for=
-          "tooltips_enable">halp, what do all these buttons do??</label>
+          "tooltips_enable">Halp! What do all these buttons do??</label>
       </div>
     </div><!-- tab-content -->
 
