--- a/web/index.html
+++ b/web/index.html
@@ -75,28 +75,32 @@
           "#panelsStayOpen-collapseTwo" aria-expanded="true" aria-controls="panelsStayOpen-collapseTwo">Viewports Layout</button></h2>
           <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingTwo">
             <div class="accordion-body">
+				<table> <!-- dummy table to hold the display template -->
+					<!-- display template -->
+                  <tr id="display-" hidden>
+                    <th scope="row" id="display_name-">Default</th>
+                    <td id="display_pos-">0,0</td>
+                    <td><input type="text" class="form-control" id="display_res-" style="max-width: 200px;"></td>
+                    <td><div class="form-check form-switch">
+                          <input class="form-check-input" type="checkbox" id="display_use-" checked>
+                        </div>
+                    </td>
+                  </tr>
+				</table>
 				<b>Detected Displays:</b>
-              <table id="display-table-" class="table caption-top" style="max-width: 600px;">
-                <caption id="display-host-"></caption>
+				<!-- host template -->
+				<div id="display_table-" hidden>
+              <table class="table caption-top" style="max-width: 600px;">
+                <caption id="display_host-"></caption>
                 <thead>
                   <tr>
                     <th scope="col">Display</th>
                     <th scope="col">Position</th>
-                    <th scope="col">Resolution <i class="bi bi-info-circle-fill" data-bs-toggle="tooltip" data-bs-html="true" data-bs-tooltip-max-width="400px" data-bs-title="Display resolution can be wrong on Windows for display scaling other than 100% (e.g. for HiDPI displays).<br>You can enter any resultion, e.g. 640x480 or use abbreviations such as 2160p for 16:9 aspect ratios.<br>Switching the taskbar of your Desktop to auto-hide is recommended. (Otherwise Windows will substract the taskbar height from display height.)"></i></th>
+                    <th scope="col">Resolution <i id="display_info-" class="bi bi-info-circle-fill" data-bs-toggle="tooltip" data-bs-html="true" data-bs-tooltip-max-width="400px" data-bs-title="Display resolution can be wrong on Windows for display scaling other than 100% (e.g. for HiDPI displays).<br>You can enter any resultion, e.g. 640x480 or use abbreviations such as 2160p for 16:9 aspect ratios.<br>Switching the taskbar of your Desktop to auto-hide is recommended. (Otherwise Windows will substract the taskbar height from display height.)"></i></th>
                     <th scope="col">Use</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr id="display-" hidden="">
-                    <!-- template -->
-                    <th scope="row" id="display-name-">Default</th>
-                    <td id="display-pos-">0,0</td>
-                    <td><input type="text" class="form-control" id="display-res-" style="max-width: 200px;"></td>
-                    <td><div class="form-check form-switch">
-                          <input class="form-check-input" type="checkbox" id="display-use-" checked>
-                        </div>
-                    </td>
-                  </tr>
                 </tbody>
               </table><button type="button" class="btn btn-secondary btn-sm" id="refresh_displays-"><i class=
               "bi bi-arrow-clockwise"></i>&nbsp;Refresh</button><br>
@@ -106,6 +110,7 @@
                 <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/mix-blend-mode -->
                 <canvas id="viewports-" width="100" height="100" style="left: 0; top: 0; z-index: 1; background-color: transparent; mix-blend-mode: darken;">
                 </canvas><!-- mix-blend-mode: lighten; -->
+              </div>
               </div>
             </div>
           </div>
