remove global displays and viewports

--- a/web/index.html
+++ b/web/index.html
@@ -262,6 +262,7 @@
       </div>
     </div><!-- tab-content -->
 
+	<!-- toast for failed display detection -->
 	<div class="toast-container position-fixed bottom-0 end-0 p-3">
 	  <div id="displaydetect_failed" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
 		<div class="toast-header">
