add_host text input

--- a/web/index.html
+++ b/web/index.html
@@ -114,6 +114,9 @@
               </div>
               </div> <!-- display_table -->
             </div> <!-- none -->
+            <div class="input-group mb-3" style="max-width: 400px;">
+             &nbsp;&nbsp;<span class="input-group-text" id="basic-addon2">Add host</span> <input type="text" class="form-control" id="add_host" placeholder="host" aria-label="host" aria-describedby="basic-addon2">
+            </div>
           </div> <!-- accordion-body -->
         </div>
         <div class="accordion-item">
