--- a/web/index.html
+++ b/web/index.html
@@ -197,8 +197,8 @@
           </tr>
         </thead>
         <tbody id="streams-table">
-          <tr id="stream-" hidden> <!-- hidden -->
-            <!-- template -->
+          <!-- template -->
+          <tr id="stream-" hidden>
             <th scope="row" id="stream_idx-">0</th>
             <td> <!-- id="stream-ctl-"> -->
 			  <span>
@@ -240,7 +240,7 @@
                 </div>
               </div>
             </td>
-          </tr>
+          </tr> <!-- stream tr -->
         </tbody>
       </table>
       <!-- global control -->
