working on streams table

--- a/web/index.html
+++ b/web/index.html
@@ -196,6 +196,7 @@
             <th scope="col">Stream</th>
           </tr>
         </thead>
+        <tbody></tbody> <!-- dummy tbody so all additional can safely be deleted -->
         <tbody id="streams-table">
           <!-- template -->
           <tr id="stream-" hidden>
