tiny display improvement for streams list

--- a/web/index.html
+++ b/web/index.html
@@ -220,11 +220,11 @@
 				  <div class="container">
 					<div class="row">
 					  <div class="col">
-						<label for="stream_volume-" class="form-label"><i class="bi bi-volume-up-fill"></i></label> <input type="range" class="form-range" id="stream_volume-">
+						<label for="stream_volume-" class="form-label"><i class="bi bi-volume-up-fill"></i></label> <input type="range" class="form-range" id="stream_volume-" value="100">
 					  </div>
 					  <div class="col">
-						<span class="mb-1" id="stream_buffer-">&nbsp;</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						<span class="mb-1" id="stream_vbr-">&nbsp;</span>
+						<span class="mb-1" id="stream_buffer-">Buffer: -</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						<span class="mb-1" id="stream_vbr-">VBR: -</span>
 						<div class="btn-group me-2" role="group" aria-label="group">
 						  <input type="checkbox" class="btn-check" id="stream_muting-" autocomplete="off">
 						  <label class="btn btn-outline-secondary" for="stream_muting-" data-bs-toggle="tooltip" data-bs-title="mute/unmute">
