add button to remove a host

--- a/web/index.html
+++ b/web/index.html
@@ -92,7 +92,7 @@
 				<!-- host template -->
 				<div id="display_table-" hidden>
               <table class="table caption-top" style="max-width: 600px;">
-                <caption id="display_host-"></caption>
+                <caption><i style="color:FireBrick" class="bi bi-x-square" id="display_host_remove-"></i>&nbsp;<span id="display_host-"></span></caption>
                 <thead>
                   <tr>
                     <th scope="col">Display</th>
