--- a/web/index.html
+++ b/web/index.html
@@ -271,7 +271,7 @@
 
 	<!-- toast for failed display detection -->
 	<div class="toast-container position-fixed bottom-0 end-0 p-3">
-	  <div id="displaydetect_failed" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+	  <div id="displaydetect_failed" class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
 		<div class="toast-header">
 		  <svg class="bd-placeholder-img rounded me-2" width="20" height="20" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#ff0000"></rect></svg>
 		  <strong class="me-auto">Display detection failed</strong>
@@ -279,7 +279,7 @@
 		  <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
 		</div>
 		<div class="toast-body">
-		  Backend display detection failed.<br>Using browser based fallback.
+		  Backend display detection failed.
 		</div>
 	  </div>
 	</div>
