--- a/web/index.html
+++ b/web/index.html
@@ -192,7 +192,7 @@
 		<table hidden> <!-- dummy table for streams tbody template -->
 			<thead></thead>
 			<tbody id="streams_tbody-"> <!-- streams tbody template -->
-			  <tr><td colspan="2"><span id="streams_host-"></span></td></tr>
+			  <tr><td colspan="2"><i style="color:FireBrick" class="bi bi-x-square" id="streams_host_remove-"></i>&nbsp;<span id="streams_host-"></span></td></tr>
 			 </tbody>
 		</table>
 		<table hidden> <!-- dummy table for stream tr template -->
