reworking missing commands detection

--- a/web/index.html
+++ b/web/index.html
@@ -186,7 +186,7 @@
           </div>
         </div>
       </div>
-      <div id="cmd_missing_alert"></div>
+      <div id="cmd_status"></div>
     </div><!-- tab-pane -->
     <div class="tab-pane fade" id="control" role="tabpanel" aria-labelledby="control-tab" style="max-width: 700px;">
 		<table hidden> <!-- dummy table for streams tbody template -->
