web: replace_child finally removed

--- a/web/index.html
+++ b/web/index.html
@@ -317,10 +317,10 @@
                 <tbody id="cmds-table">
                   <tr id="cmd-" hidden>
                     <!-- template -->
-                    <td id="cmd-required-"></td>
-                    <td id="cmd-cmd-"></td>
-                    <td id="cmd-exitcode-"></td> <!-- style="max-width: 200px;" -->
-                    <td id="cmd-output-" style="white-space: pre;"></td>
+                    <td id="cmd_required-"></td>
+                    <td id="cmd_cmd-"></td>
+                    <td id="cmd_exitcode-"></td> <!-- style="max-width: 200px;" -->
+                    <td id="cmd_output-" style="white-space: pre;"></td>
                   </tr>
                 </tbody>
               </table>
