webui: add hostname in commands info

--- a/web/index.html
+++ b/web/index.html
@@ -297,7 +297,7 @@
 	  <div class="modal-dialog">
 		<div class="modal-content">
 		  <div class="modal-header">
-			<h1 class="modal-title fs-5" id="cmdModalLabel">Required &amp; optional commands&nbsp;<span id="cmds_modal_host-"></span></h1>
+			<h1 class="modal-title fs-5" id="cmdModalLabel">Required &amp; optional commands&nbsp;<span id="cmds_modal_host"></span></h1>
 			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="cmd_modal_close1"></button>
 		  </div>
 
