webui: working on cmds_modal

--- a/web/index.html
+++ b/web/index.html
@@ -298,7 +298,7 @@
 		<div class="modal-content">
 		  <div class="modal-header">
 			<h1 class="modal-title fs-5" id="cmdModalLabel">Required &amp; optional commands&nbsp;<span id="cmds_modal_host"></span></h1>
-			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="cmd_modal_close1"></button>
+			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 		  </div>
 
 		  <div class="modal-body">
@@ -327,9 +327,9 @@
           <div id="req_missing" hidden><center><b>fnordstream will not work without the mpv Player and yt-dlp!</b></center></div>
 		  </div>
 		  <div class="modal-footer">
-			<div class="spinner-border" role="status" id="cmd_refresh_busy2" hidden><span class="visually-hidden">Loading...</span></div>
-			<button type="button" class="btn btn-secondary" id="commands_refresh2"><i class="bi bi-arrow-clockwise"></i>&nbsp;Refresh</button>
-			<button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="cmd_modal_close2">Close</button>
+			<div class="spinner-border" role="status" id="cmd_refresh_busy" hidden><span class="visually-hidden">Loading...</span></div>
+			<button type="button" class="btn btn-secondary" id="commands_refresh"><i class="bi bi-arrow-clockwise"></i>&nbsp;Refresh</button>
+			<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 		  </div>
 		</div>
 	  </div>
