web: add tooltip explaining buffer value

--- a/web/index.html
+++ b/web/index.html
@@ -230,7 +230,9 @@
 						<label for="stream_volume-" class="form-label"><i class="bi bi-volume-up-fill"></i></label> <input type="range" class="form-range" id="stream_volume-" value="100">
 					  </div>
 					  <div class="col">
-						<span class="mb-1" id="stream_buffer-">Buffer: -</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						<span class="mb-1" id="stream_buffer-">Buffer: -</span>
+						<i id="stream_buffer_info-" class="bi bi-info-circle-fill" data-tt-persist="true" data-bs-toggle="tooltip" data-bs-title="minimum buffered duration in 60 seconds period"></i>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						<span class="mb-1" id="stream_vbr-">VBR: -</span>
 						<div class="btn-group me-2" role="group" aria-label="group">
 						  <input type="checkbox" class="btn-check" id="stream_muting-" autocomplete="off">
